--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400..800&display=swap');
-@tailwind base;
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Manrope:wght@200..800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
   font-family: "Poppins";
   overflow-x: hidden;
+}
+
+.Merriweather{
+  font-family: "Merriweather", serif;
 }
 
 .headfont{
@@ -250,7 +254,7 @@ body {
     /* background-color: #fff; */
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
     font-family: Arial, sans-serif;
-    color: white;
+    color: #333;
     line-height: 1.6;
 }
 
@@ -303,11 +307,11 @@ body {
 
 .article-container header h1 {
     font-size: 24px;
-    color: white;
+    /* color: #333; */
 }
 
 .article-container header p {
-    color: white;
+    /* color: #666; */
     font-size: 1.1rem;
 }
 
@@ -315,13 +319,13 @@ body {
 .article-container h2 {
     font-size: 17px;
     margin-top: 20px;
-    color: white;
+    /* color: #333; */
     font-weight: bold;
 }
 .article-container h3 {
     font-size: 15px;
     margin-top: 20px;
-    color: white;
+    /* color: #333; */
     font-weight: bold;
 }
 
